# elasticsearch-nginx-logger

./: .gitignore  Cargo.toml  README.md
src/: logger.rs  main.rs  server.rs
