[package]
name = "rust-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
termsize = "0.1"
reqwest = "0.11.11"
tokio = {version = "1.21.1", features = ["full"]}
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
colored = "2.0.0"