[package]
name = "rust-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
termsize = "0.1"
reqwest = "0.11.11"
tokio = {version = "1.21.1", features = ["full"]}
serde = "1.0.144"
serde_json = "1.0.85"
serde_derive = "1.0.144"
colored = "2.0.0"
elasticsearch = "8.4.0-alpha.1"
chrono = "0.4.22"
logwatcher = "0.1.1"
async-await = "0.2.1"
sha1 = "0.10.5"
futures = { version = "0.3", features = ["compat"] }

[profile.release]
strip = true
opt-level = 3
lto = true